--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,10 @@
 #home-searcher{
     width: 60vw;
 }
+#div-searcher{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 80vh;
+}
