--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -2,3 +2,12 @@
     width: 140px;
     height: 140px ;
 }
+.profile-card{
+    max-width: 345px;
+}
+.card-media{
+    height: 200px;
+}
+.profile-info{
+    display: inline;
+}
