Flex Style Change

--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -8,6 +8,7 @@
 .card-media{
     height: 200px;
 }
-.profile-info{
-    display: inline;
+.div-profile-card{
+    display: flex;
+    justify-content: center;
 }
